[gd_scene load_steps=7 format=3 uid="uid://c18v5gt5qy8pc"]

[ext_resource type="Theme" uid="uid://bbtyhsmcmpxrn" path="res://assets/resources/theming/main_theme.tres" id="1_lj0u1"]
[ext_resource type="Script" path="res://scenes/dialog_system/dialog.gd" id="1_v2710"]
[ext_resource type="Resource" uid="uid://b2v7reuxvw5v1" path="res://scenes/dialog_system/data/TestDialog.tres" id="2_x0hkj"]

[sub_resource type="LabelSettings" id="LabelSettings_sfk5k"]
font_size = 48
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cq0c"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.878431)
skew = Vector2(0.25, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_soonh"]
size = Vector2(16, 16)

[node name="Dialog" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lj0u1")
script = ExtResource("1_v2710")
current_data = ExtResource("2_x0hkj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CharacterLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Name"
label_settings = SubResource("LabelSettings_sfk5k")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DialogPanelVariant"
theme_override_styles/panel = SubResource("StyleBoxFlat_1cq0c")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TextBox" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
bbcode_enabled = true
text = "lorem ipsum dolor sit amet!!!!!"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
alignment = 2

[node name="ContinueIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_soonh")
